fix tags overflowing in expanded accordian

--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -8,7 +8,7 @@
   border: 1px solid $turqoise;
   width: fit-content;
   padding: space(12);
-  display: inline;
+  display: inline-block;
   background-color: $white;
 
   &--selected {
